# API-Test-Gen

./: .gitignore  ARCHITECTURE.md  LLM_CONFIGURATION.md  LLM_PROVIDERS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RUNNING.md  SETUP.md  docker-compose.yml  start-manual.sh  start.sh
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  6524e82f7870_add_generated_endpoints_to_test_suite.py  8a2b7c1e3ab4_add_integrations_and_ci_status.py  9c3f2d7c4b10_add_activity_log_table.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: __init__.py  activity.py  config.py  execute.py  generate.py  integrations.py  projects.py  reports.py  upload.py
backend/app/core/: config.py  logging.py  middleware.py  monitoring.py  security.py
backend/app/db/: database.py  models.py
backend/app/services/: activity_logger.py  openapi_parser.py  test_executor.py  test_generator.py
backend/tests/: test_openapi_parser.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Navbar.tsx
frontend/src/pages/: Config.tsx  Dashboard.tsx  ProjectDetail.tsx  Reports.tsx  Reports.tsx.backup  Results.tsx  TestSuite.tsx  Upload.tsx
frontend/src/services/: api.ts
frontend/src/store/: store.ts
frontend/src/store/slices/: configSlice.ts  projectsSlice.ts  testSlice.ts
